<resources>
    <string name="app_name">Area</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_office365">Sign in with Office 365</string>
    <string name="subscribe_to_timer">Subscribe to Timer</string>
    <string name="add">Add</string>
    <string name="refresh_notifications">Refresh Notifications</string>
    <string name="weather_town_hint">Town</string>
    <string name="subscribe_to_weather">Subscribe to Weather</string>
    <string name="subscribe_to_trends">Subscribe to Trends</string>
    <string name="trends_hint">Trend</string>
</resources>
