<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/sub_trends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="subscribeTrends"
        android:text="@string/subscribe_to_trends" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/trends_hint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/trends_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="trends"
            android:text="@string/add" />
    </LinearLayout>
</LinearLayout>