<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/sub_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="subscribeWeather"
        android:text="@string/subscribe_to_weather" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weather_town_hint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/weather_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="weather"
            android:text="@string/add" />
    </LinearLayout>
</LinearLayout>